2013-06-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el: Don't require cl-lib.

	* eww.el: Start writing a new, tiny web browser.
	(eww-previous-url): New command.
	(eww-quit): New command.

2013-06-10  Albert Krewinkel  <krewinkel@moltkeplatz.de>

	* sieve.el: Put point at beginning of buffer when viewing a script.
	(sieve-open-server): respect the PORT parameter. Show the correct port
	number in sieve-buffer's header. Fixed code to also work with a string
	as port specifier. Properly close the connection on pressing 'q'. Make
	sieve-manage-quit close the connection and process buffer. Also, remove
	duplicate keybinding for 'q'.

2013-06-10  Roy Hashimoto  <roy.hashimoto@gmail.com>  (tiny change)

	* mm-view.el (mm-pkcs7-signed-magic): Allow newline in the regexp and
	make it easier to read.
	(mm-pkcs7-enveloped-magic): Ditto.

2013-06-06  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-ems.el (gnus-image-type-available-p): Test `display-images-p'
	before `image-type-available-p' to avoid loading the image libraries
	needlessly.

2013-06-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-date-ut, article-update-date-lapsed): Don't
	assume Date header begins with "Date", that may be customized into
	something like "X-Sent" using gnus-article-time-format.
	(article-transform-date): Allow multi-line Date header.

2013-06-02  David Engster  <deng@randomsample.de>

	* registry.el (initialize-instance, registry-lookup)
	(registry-lookup-breaks-before-lexbind, registry-lookup-secondary)
	(registry-lookup-secondary-value, registry-search, registry-delete)
	(registry-insert, registry-reindex, registry-size, registry-prune): Do
	not wrap methods in `eval-and-compile'.  This breaks due to latest
	changes in EIEIO (introduction of eieio-core.el).

2013-05-30  Glenn Morris  <rgm@gnu.org>

	* nnmail.el (nnmail-fancy-expiry-target):
	Also bind mail-dont-reply-to-names.

	* spam-stat.el (spam-stat-save):
	No need to tweak font-lock in temp buffers.
